# pilot

./: .gitignore  pyproject.toml
src/: main.py
src/pilot/: class_example.py  encoding.py  listcomprehension.py  listops.py  nestedlist.py  primes.py  quartile.py  sample.py  statistics.py  weightedmean.py
tests/: test_sample.py
