    [project]
    name = "pilot"
    version = "0.1.0"
    description = "DB pilot Project
    requires-python = ">=3.8"
    dependencies = [
        "pandas",
        "numpy",
    ]

    [build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

    [tool.pytest.ini_options]
    addopts = "--strict-markers"
    testpaths = ["tests"]